data/derived/comb/progs/unify/prog2343.ml.out
Characters 47-49:
  let temp = fun x -> hi + 3 in
                      ^^
Error: This expression has type int -> int
       but an expression was expected of type int
